Update Readme and create route getAmountOfOrders
Created route getAmountOfOrders
Updated README
Added Summary for Swagger UI
